--- a/AndroidLabOne/app/src/main/res/layout/activity_create_to_do.xml
+++ b/AndroidLabOne/app/src/main/res/layout/activity_create_to_do.xml
@@ -7,63 +7,65 @@
     tools:context=".CreateToDoActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/createTitle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/editText"
-        app:layout_constraintEnd_toStartOf="@+id/editText"
+        android:lineSpacingExtra="0sp"
+        android:text="Title"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/enterTitleOnCreate"
+        app:layout_constraintEnd_toStartOf="@+id/enterTitleOnCreate"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText" />
+        app:layout_constraintTop_toTopOf="@+id/enterTitleOnCreate" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/enterTitleOnCreate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Enter title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/createTitle"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/createContent"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/editText2"
-        app:layout_constraintEnd_toStartOf="@+id/editText2"
+        android:text="Content"
+        app:layout_constraintBottom_toBottomOf="@+id/enterContentOnCreate"
+        app:layout_constraintEnd_toStartOf="@+id/enterContentOnCreate"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/editText2" />
+        app:layout_constraintTop_toTopOf="@+id/enterContentOnCreate" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/enterContentOnCreate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Enter content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toEndOf="@+id/createContent"
+        app:layout_constraintTop_toBottomOf="@+id/enterTitleOnCreate" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnOnCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:text="Button"
+        android:layout_marginTop="120dp"
+        android:text="@string/createBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/enterContentOnCreate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
