--- a/AndroidLabOne/app/src/main/res/layout/activity_view_to_do.xml
+++ b/AndroidLabOne/app/src/main/res/layout/activity_view_to_do.xml
@@ -34,19 +34,19 @@
         app:layout_constraintTop_toBottomOf="@+id/viewTitle" />
 
     <Button
-        android:id="@+id/viewUpdate"
+        android:id="@+id/viewUpdateBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:freezesText="false"
         android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/viewDelete"
+        app:layout_constraintEnd_toStartOf="@+id/viewDeleteBtn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/viewDelete"
+        android:id="@+id/viewDeleteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
@@ -54,5 +54,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/viewUpdate" />
+        app:layout_constraintStart_toEndOf="@+id/viewUpdateBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
