--- a/AndroidLabOne/app/src/main/res/layout/activity_create_to_do.xml
+++ b/AndroidLabOne/app/src/main/res/layout/activity_create_to_do.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:lineSpacingExtra="0sp"
-        android:text="Title"
+        android:text="@string/title_create_string"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/enterTitleOnCreate"
         app:layout_constraintEnd_toStartOf="@+id/enterTitleOnCreate"
@@ -26,8 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="@string/title_hint_string"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="Enter title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/createTitle"
@@ -38,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="Content"
+        android:text="@string/content_create_string"
         app:layout_constraintBottom_toBottomOf="@+id/enterContentOnCreate"
         app:layout_constraintEnd_toStartOf="@+id/enterContentOnCreate"
         app:layout_constraintHorizontal_bias="0.5"
@@ -51,8 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="@string/content_hint_string"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="Enter content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/createContent"
@@ -63,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
-        android:text="@string/createBtn"
+        android:text="@string/create_button_sting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
