--- a/AndroidLabOne/app/src/main/res/layout/activity_update_to_do.xml
+++ b/AndroidLabOne/app/src/main/res/layout/activity_update_to_do.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="@string/titleTextView"
+        android:text="@string/title_create_string"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/newTitle"
         app:layout_constraintEnd_toStartOf="@+id/newTitle"
@@ -25,8 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="@string/title_hint_string"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="The title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/inUpdateTitle"
@@ -37,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="The Content"
+        android:text="@string/content_create_string"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/newContent"
         app:layout_constraintEnd_toStartOf="@+id/newContent"
@@ -51,8 +52,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
+        android:hint="@string/content_hint_string"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
-        android:text="Write new content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/inUpdateContent"
@@ -63,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Save"
+        android:text="@string/save_button_string"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
