--- a/AndroidLabOne/app/src/main/res/layout/activity_view_to_do.xml
+++ b/AndroidLabOne/app/src/main/res/layout/activity_view_to_do.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:freezesText="false"
-        android:text="Update"
+        android:text="@string/update_button_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/viewDeleteBtn"
         app:layout_constraintHorizontal_bias="0.5"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:text="Delete"
+        android:text="@string/delete_button_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
